# qveris-earnings-call-signal-demo

./: .env.example  .gitignore  LICENSE  README.md  article.md  feishu_article_v2.xml  feishu_article_v3.xml  feishu_article_v4.xml  pyproject.toml
earnings_call_signal/: __init__.py  analyzer.py  app.py  cli.py  client.py  config.py  fundamentals.py  market.py  news.py
outputs/: annotation_template.csv  earnings_call_signal_report.json  earnings_call_signal_report.md  evidence_ledger.csv  fundamentals_context.csv  llm_review_pack.json  market_context.csv  news_context.csv  research_timeline.csv  semantic_breakdown.csv  theme_matrix.csv  theme_timeseries.csv
